y.output
   0  $accept : programm $end

   1  programm : class
   2           | emptyClass

   3  class : JCLASS IDENTIFIER LBRACKET fields methods RBRACKET
   4        | JCLASS IDENTIFIER LBRACKET methods RBRACKET
   5        | JCLASS IDENTIFIER LBRACKET fields RBRACKET

   6  emptyClass : JCLASS IDENTIFIER LBRACKET RBRACKET

   7  fields : field
   8         | fields field

   9  field : type IDENTIFIER SEMICOLON

  10  type : JTYPE

  11  methods : method
  12          | methods method

  13  method : type IDENTIFIER LBRACE parameters RBRACE block
  14         | type IDENTIFIER LBRACE RBRACE block

  15  parameters : parameter
  16             | parameters COMMA parameter

  17  parameter : type IDENTIFIER

  18  block : LBRACKET RBRACKET
  19        | LBRACKET statements RBRACKET

  20  statements : statement
  21             | statements statement

  22  statement : ifthenstatement
  23            | ifthenelsestatement
  24            | whilestatement
  25            | block
  26            | returnstatement SEMICOLON
  27            | stmtExprStmt
  28            | localVarDecl SEMICOLON

  29  ifthenstatement : JIF LBRACE expression RBRACE statement

  30  ifthenelsestatement : JIF LBRACE expression RBRACE statement ELSE statement

  31  whilestatement : JWHILE LBRACE expression RBRACE statement

  32  returnstatement : JRETURN expression

  33  stmtExprExpr : stmtExpr

  34  stmtExprStmt : stmtExpr

  35  localVarDecl : type IDENTIFIER

  36  expression : this
  37             | super
  38             | localOrFieldVar
  39             | integer
  40             | binary
  41             | unary
  42             | bool
  43             | instVar
  44             | string
  45             | jnull
  46             | char
  47             | stmtExprExpr
  48             | LBRACE expression RBRACE

  49  stmtExpr : assign SEMICOLON
  50           | new SEMICOLON
  51           | methodCall
  52           | emptyMethodCall

  53  this : JTHIS

  54  super : JSUPER

  55  localOrFieldVar : IDENTIFIER

  56  integer : INT

  57  binary : expression BINARYOPERATOR expression
  58         | expression PLUSMINUSOPERATOR expression

  59  unary : UNARYOPERATOR expression
  60        | PLUSMINUSOPERATOR expression

  61  bool : BOOLEAN

  62  instVar : expression POINT IDENTIFIER

  63  string : STRING

  64  jnull : NULL

  65  char : JCHAR

  66  assign : IDENTIFIER EQUALS expression

  67  new : JNEW type LBRACE expressions RBRACE
  68      | JNEW type LBRACE RBRACE

  69  methodCall : expression POINT IDENTIFIER LBRACE expressions RBRACE
  70             | IDENTIFIER LBRACE expressions RBRACE

  71  emptyMethodCall : expression POINT IDENTIFIER LBRACE RBRACE
  72                  | IDENTIFIER LBRACE RBRACE

  73  expressions : expression
  74              | expressions COMMA expression

state 0
	$accept : . programm $end  (0)

	JCLASS  shift 1
	.  error

	programm  goto 2
	class  goto 3
	emptyClass  goto 4


state 1
	class : JCLASS . IDENTIFIER LBRACKET fields methods RBRACKET  (3)
	class : JCLASS . IDENTIFIER LBRACKET methods RBRACKET  (4)
	class : JCLASS . IDENTIFIER LBRACKET fields RBRACKET  (5)
	emptyClass : JCLASS . IDENTIFIER LBRACKET RBRACKET  (6)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : programm . $end  (0)

	$end  accept


state 3
	programm : class .  (1)

	.  reduce 1


state 4
	programm : emptyClass .  (2)

	.  reduce 2


state 5
	class : JCLASS IDENTIFIER . LBRACKET fields methods RBRACKET  (3)
	class : JCLASS IDENTIFIER . LBRACKET methods RBRACKET  (4)
	class : JCLASS IDENTIFIER . LBRACKET fields RBRACKET  (5)
	emptyClass : JCLASS IDENTIFIER . LBRACKET RBRACKET  (6)

	LBRACKET  shift 6
	.  error


state 6
	class : JCLASS IDENTIFIER LBRACKET . fields methods RBRACKET  (3)
	class : JCLASS IDENTIFIER LBRACKET . methods RBRACKET  (4)
	class : JCLASS IDENTIFIER LBRACKET . fields RBRACKET  (5)
	emptyClass : JCLASS IDENTIFIER LBRACKET . RBRACKET  (6)

	JTYPE  shift 7
	RBRACKET  shift 8
	.  error

	method  goto 9
	field  goto 10
	type  goto 11
	fields  goto 12
	methods  goto 13


state 7
	type : JTYPE .  (10)

	.  reduce 10


state 8
	emptyClass : JCLASS IDENTIFIER LBRACKET RBRACKET .  (6)

	.  reduce 6


state 9
	methods : method .  (11)

	.  reduce 11


state 10
	fields : field .  (7)

	.  reduce 7


state 11
	field : type . IDENTIFIER SEMICOLON  (9)
	method : type . IDENTIFIER LBRACE parameters RBRACE block  (13)
	method : type . IDENTIFIER LBRACE RBRACE block  (14)

	IDENTIFIER  shift 14
	.  error


state 12
	class : JCLASS IDENTIFIER LBRACKET fields . methods RBRACKET  (3)
	class : JCLASS IDENTIFIER LBRACKET fields . RBRACKET  (5)
	fields : fields . field  (8)

	JTYPE  shift 7
	RBRACKET  shift 15
	.  error

	method  goto 9
	field  goto 16
	type  goto 11
	methods  goto 17


state 13
	class : JCLASS IDENTIFIER LBRACKET methods . RBRACKET  (4)
	methods : methods . method  (12)

	JTYPE  shift 7
	RBRACKET  shift 18
	.  error

	method  goto 19
	type  goto 20


state 14
	field : type IDENTIFIER . SEMICOLON  (9)
	method : type IDENTIFIER . LBRACE parameters RBRACE block  (13)
	method : type IDENTIFIER . LBRACE RBRACE block  (14)

	SEMICOLON  shift 21
	LBRACE  shift 22
	.  error


state 15
	class : JCLASS IDENTIFIER LBRACKET fields RBRACKET .  (5)

	.  reduce 5


state 16
	fields : fields field .  (8)

	.  reduce 8


state 17
	class : JCLASS IDENTIFIER LBRACKET fields methods . RBRACKET  (3)
	methods : methods . method  (12)

	JTYPE  shift 7
	RBRACKET  shift 23
	.  error

	method  goto 19
	type  goto 20


state 18
	class : JCLASS IDENTIFIER LBRACKET methods RBRACKET .  (4)

	.  reduce 4


state 19
	methods : methods method .  (12)

	.  reduce 12


state 20
	method : type . IDENTIFIER LBRACE parameters RBRACE block  (13)
	method : type . IDENTIFIER LBRACE RBRACE block  (14)

	IDENTIFIER  shift 24
	.  error


state 21
	field : type IDENTIFIER SEMICOLON .  (9)

	.  reduce 9


state 22
	method : type IDENTIFIER LBRACE . parameters RBRACE block  (13)
	method : type IDENTIFIER LBRACE . RBRACE block  (14)

	JTYPE  shift 7
	RBRACE  shift 25
	.  error

	parameter  goto 26
	type  goto 27
	parameters  goto 28


state 23
	class : JCLASS IDENTIFIER LBRACKET fields methods RBRACKET .  (3)

	.  reduce 3


state 24
	method : type IDENTIFIER . LBRACE parameters RBRACE block  (13)
	method : type IDENTIFIER . LBRACE RBRACE block  (14)

	LBRACE  shift 22
	.  error


state 25
	method : type IDENTIFIER LBRACE RBRACE . block  (14)

	LBRACKET  shift 29
	.  error

	block  goto 30


state 26
	parameters : parameter .  (15)

	.  reduce 15


state 27
	parameter : type . IDENTIFIER  (17)

	IDENTIFIER  shift 31
	.  error


state 28
	method : type IDENTIFIER LBRACE parameters . RBRACE block  (13)
	parameters : parameters . COMMA parameter  (16)

	COMMA  shift 32
	RBRACE  shift 33
	.  error


state 29
	block : LBRACKET . RBRACKET  (18)
	block : LBRACKET . statements RBRACKET  (19)

	JWHILE  shift 34
	JIF  shift 35
	JTYPE  shift 7
	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	LBRACKET  shift 29
	RBRACKET  shift 44
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	JRETURN  shift 49
	.  error

	type  goto 50
	expression  goto 51
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	statement  goto 64
	localVarDecl  goto 65
	whilestatement  goto 66
	ifthenstatement  goto 67
	ifthenelsestatement  goto 68
	returnstatement  goto 69
	block  goto 70
	stmtExprStmt  goto 71
	new  goto 72
	stmtExpr  goto 73
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76
	statements  goto 77


state 30
	method : type IDENTIFIER LBRACE RBRACE block .  (14)

	.  reduce 14


state 31
	parameter : type IDENTIFIER .  (17)

	.  reduce 17


state 32
	parameters : parameters COMMA . parameter  (16)

	JTYPE  shift 7
	.  error

	parameter  goto 78
	type  goto 27


state 33
	method : type IDENTIFIER LBRACE parameters RBRACE . block  (13)

	LBRACKET  shift 29
	.  error

	block  goto 79


state 34
	whilestatement : JWHILE . LBRACE expression RBRACE statement  (31)

	LBRACE  shift 80
	.  error


state 35
	ifthenstatement : JIF . LBRACE expression RBRACE statement  (29)
	ifthenelsestatement : JIF . LBRACE expression RBRACE statement ELSE statement  (30)

	LBRACE  shift 81
	.  error


state 36
	integer : INT .  (56)

	.  reduce 56


state 37
	string : STRING .  (63)

	.  reduce 63


state 38
	char : JCHAR .  (65)

	.  reduce 65


state 39
	bool : BOOLEAN .  (61)

	.  reduce 61


state 40
	localOrFieldVar : IDENTIFIER .  (55)
	assign : IDENTIFIER . EQUALS expression  (66)
	methodCall : IDENTIFIER . LBRACE expressions RBRACE  (70)
	emptyMethodCall : IDENTIFIER . LBRACE RBRACE  (72)

	EQUALS  shift 82
	LBRACE  shift 83
	SEMICOLON  reduce 55
	COMMA  reduce 55
	POINT  reduce 55
	BINARYOPERATOR  reduce 55
	PLUSMINUSOPERATOR  reduce 55
	RBRACE  reduce 55


state 41
	unary : UNARYOPERATOR . expression  (59)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 84
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 42
	unary : PLUSMINUSOPERATOR . expression  (60)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 86
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 43
	expression : LBRACE . expression RBRACE  (48)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 87
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 44
	block : LBRACKET RBRACKET .  (18)

	.  reduce 18


state 45
	this : JTHIS .  (53)

	.  reduce 53


state 46
	super : JSUPER .  (54)

	.  reduce 54


state 47
	new : JNEW . type LBRACE expressions RBRACE  (67)
	new : JNEW . type LBRACE RBRACE  (68)

	JTYPE  shift 7
	.  error

	type  goto 88


state 48
	jnull : NULL .  (64)

	.  reduce 64


state 49
	returnstatement : JRETURN . expression  (32)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 89
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 50
	localVarDecl : type . IDENTIFIER  (35)

	IDENTIFIER  shift 90
	.  error


state 51
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	.  error


state 52
	expression : super .  (37)

	.  reduce 37


state 53
	expression : this .  (36)

	.  reduce 36


state 54
	expression : integer .  (39)

	.  reduce 39


state 55
	expression : bool .  (42)

	.  reduce 42


state 56
	expression : instVar .  (43)

	.  reduce 43


state 57
	expression : string .  (44)

	.  reduce 44


state 58
	expression : jnull .  (45)

	.  reduce 45


state 59
	expression : char .  (46)

	.  reduce 46


state 60
	expression : localOrFieldVar .  (38)

	.  reduce 38


state 61
	expression : binary .  (40)

	.  reduce 40


state 62
	expression : unary .  (41)

	.  reduce 41


state 63
	expression : stmtExprExpr .  (47)

	.  reduce 47


state 64
	statements : statement .  (20)

	.  reduce 20


state 65
	statement : localVarDecl . SEMICOLON  (28)

	SEMICOLON  shift 94
	.  error


state 66
	statement : whilestatement .  (24)

	.  reduce 24


state 67
	statement : ifthenstatement .  (22)

	.  reduce 22


state 68
	statement : ifthenelsestatement .  (23)

	.  reduce 23


state 69
	statement : returnstatement . SEMICOLON  (26)

	SEMICOLON  shift 95
	.  error


state 70
	statement : block .  (25)

	.  reduce 25


state 71
	statement : stmtExprStmt .  (27)

	.  reduce 27


state 72
	stmtExpr : new . SEMICOLON  (50)

	SEMICOLON  shift 96
	.  error


73: reduce/reduce conflict (reduce 33, reduce 34) on PLUSMINUSOPERATOR
state 73
	stmtExprExpr : stmtExpr .  (33)
	stmtExprStmt : stmtExpr .  (34)

	JWHILE  reduce 34
	JIF  reduce 34
	ELSE  reduce 34
	JTYPE  reduce 34
	INT  reduce 34
	STRING  reduce 34
	JCHAR  reduce 34
	BOOLEAN  reduce 34
	IDENTIFIER  reduce 34
	POINT  reduce 33
	UNARYOPERATOR  reduce 34
	BINARYOPERATOR  reduce 33
	PLUSMINUSOPERATOR  reduce 33
	LBRACE  reduce 34
	LBRACKET  reduce 34
	RBRACKET  reduce 34
	JTHIS  reduce 34
	JSUPER  reduce 34
	JNEW  reduce 34
	NULL  reduce 34
	JRETURN  reduce 34


state 74
	stmtExpr : methodCall .  (51)

	.  reduce 51


state 75
	stmtExpr : emptyMethodCall .  (52)

	.  reduce 52


state 76
	stmtExpr : assign . SEMICOLON  (49)

	SEMICOLON  shift 97
	.  error


state 77
	block : LBRACKET statements . RBRACKET  (19)
	statements : statements . statement  (21)

	JWHILE  shift 34
	JIF  shift 35
	JTYPE  shift 7
	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	LBRACKET  shift 29
	RBRACKET  shift 98
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	JRETURN  shift 49
	.  error

	type  goto 50
	expression  goto 51
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	statement  goto 99
	localVarDecl  goto 65
	whilestatement  goto 66
	ifthenstatement  goto 67
	ifthenelsestatement  goto 68
	returnstatement  goto 69
	block  goto 70
	stmtExprStmt  goto 71
	new  goto 72
	stmtExpr  goto 73
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 78
	parameters : parameters COMMA parameter .  (16)

	.  reduce 16


state 79
	method : type IDENTIFIER LBRACE parameters RBRACE block .  (13)

	.  reduce 13


state 80
	whilestatement : JWHILE LBRACE . expression RBRACE statement  (31)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 100
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 81
	ifthenstatement : JIF LBRACE . expression RBRACE statement  (29)
	ifthenelsestatement : JIF LBRACE . expression RBRACE statement ELSE statement  (30)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 101
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 82
	assign : IDENTIFIER EQUALS . expression  (66)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 102
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 83
	methodCall : IDENTIFIER LBRACE . expressions RBRACE  (70)
	emptyMethodCall : IDENTIFIER LBRACE . RBRACE  (72)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	RBRACE  shift 103
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 104
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76
	expressions  goto 105


84: shift/reduce conflict (shift 91, reduce 59) on POINT
84: shift/reduce conflict (shift 92, reduce 59) on BINARYOPERATOR
84: shift/reduce conflict (shift 93, reduce 59) on PLUSMINUSOPERATOR
state 84
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	unary : UNARYOPERATOR expression .  (59)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	SEMICOLON  reduce 59
	COMMA  reduce 59
	RBRACE  reduce 59


state 85
	stmtExprExpr : stmtExpr .  (33)

	.  reduce 33


86: shift/reduce conflict (shift 91, reduce 60) on POINT
86: shift/reduce conflict (shift 92, reduce 60) on BINARYOPERATOR
86: shift/reduce conflict (shift 93, reduce 60) on PLUSMINUSOPERATOR
state 86
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	unary : PLUSMINUSOPERATOR expression .  (60)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	SEMICOLON  reduce 60
	COMMA  reduce 60
	RBRACE  reduce 60


state 87
	expression : LBRACE expression . RBRACE  (48)
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	RBRACE  shift 106
	.  error


state 88
	new : JNEW type . LBRACE expressions RBRACE  (67)
	new : JNEW type . LBRACE RBRACE  (68)

	LBRACE  shift 107
	.  error


state 89
	returnstatement : JRETURN expression .  (32)
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	SEMICOLON  reduce 32


state 90
	localVarDecl : type IDENTIFIER .  (35)

	.  reduce 35


state 91
	instVar : expression POINT . IDENTIFIER  (62)
	methodCall : expression POINT . IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression POINT . IDENTIFIER LBRACE RBRACE  (71)

	IDENTIFIER  shift 108
	.  error


state 92
	binary : expression BINARYOPERATOR . expression  (57)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 109
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 93
	binary : expression PLUSMINUSOPERATOR . expression  (58)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 110
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76


state 94
	statement : localVarDecl SEMICOLON .  (28)

	.  reduce 28


state 95
	statement : returnstatement SEMICOLON .  (26)

	.  reduce 26


state 96
	stmtExpr : new SEMICOLON .  (50)

	.  reduce 50


state 97
	stmtExpr : assign SEMICOLON .  (49)

	.  reduce 49


state 98
	block : LBRACKET statements RBRACKET .  (19)

	.  reduce 19


state 99
	statements : statements statement .  (21)

	.  reduce 21


state 100
	whilestatement : JWHILE LBRACE expression . RBRACE statement  (31)
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	RBRACE  shift 111
	.  error


state 101
	ifthenstatement : JIF LBRACE expression . RBRACE statement  (29)
	ifthenelsestatement : JIF LBRACE expression . RBRACE statement ELSE statement  (30)
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	RBRACE  shift 112
	.  error


state 102
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	assign : IDENTIFIER EQUALS expression .  (66)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	SEMICOLON  reduce 66


state 103
	emptyMethodCall : IDENTIFIER LBRACE RBRACE .  (72)

	.  reduce 72


state 104
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)
	expressions : expression .  (73)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	COMMA  reduce 73
	RBRACE  reduce 73


state 105
	methodCall : IDENTIFIER LBRACE expressions . RBRACE  (70)
	expressions : expressions . COMMA expression  (74)

	COMMA  shift 113
	RBRACE  shift 114
	.  error


state 106
	expression : LBRACE expression RBRACE .  (48)

	.  reduce 48


state 107
	new : JNEW type LBRACE . expressions RBRACE  (67)
	new : JNEW type LBRACE . RBRACE  (68)

	INT  shift 36
	STRING  shift 37
	JCHAR  shift 38
	BOOLEAN  shift 39
	IDENTIFIER  shift 40
	UNARYOPERATOR  shift 41
	PLUSMINUSOPERATOR  shift 42
	LBRACE  shift 43
	RBRACE  shift 115
	JTHIS  shift 45
	JSUPER  shift 46
	JNEW  shift 47
	NULL  shift 48
	.  error

	expression  goto 104
	super  goto 52
	this  goto 53
	integer  goto 54
	bool  goto 55
	instVar  goto 56
	string  goto 57
	jnull  goto 58
	char  goto 59
	localOrFieldVar  goto 60
	binary  goto 61
	unary  goto 62
	stmtExprExpr  goto 63
	new  goto 72
	stmtExpr  goto 85
	methodCall  goto 74
	emptyMethodCall  goto 75
	assign  goto 76
	expressions  goto 116


state 108
	instVar : expression POINT IDENTIFIER .  (62)
	methodCall : expression POINT IDENTIFIER . LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression POINT IDENTIFIER . LBRACE RBRACE  (71)

	LBRACE  shift 117
	SEMICOLON  reduce 62
	COMMA  reduce 62
	POINT  reduce 62
	BINARYOPERATOR  reduce 62
	PLUSMINUSOPERATOR  reduce 62
	RBRACE  reduce 62


109: shift/reduce conflict (shift 91, reduce 57) on POINT
109: shift/reduce conflict (shift 92, reduce 57) on BINARYOPERATOR
109: shift/reduce conflict (shift 93, reduce 57) on PLUSMINUSOPERATOR
state 109
	binary : expression . BINARYOPERATOR expression  (57)
	binary : expression BINARYOPERATOR expression .  (57)
	binary : expression . PLUSMINUSOPERATOR expression  (58)
	instVar : expression . POINT IDENTIFIER  (62)
	methodCall : expression . POINT IDENTIFIER LBRACE expressions RBRACE  (69)
	emptyMethodCall : expression . POINT IDENTIFIER LBRACE RBRACE  (71)

	POINT  shift 91
	BINARYOPERATOR  shift 92
	PLUSMINUSOPERATOR  shift 93
	SEMICOLON  reduce 57
	COMMA  reduce 57
	RBRACE  reduce 57

